k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-k8s-depl
  labels:
    app: react-k8s
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-k8s
  template:
    metadata:
      labels:
        app: react-k8s
    spec:
      containers:
      - name: react-k8s
        image: jaybien/react-k8s
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: react-k8s
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
